파이선 임시 끝

--- a/3Dgraph.ipynb
+++ b/3Dgraph.ipynb
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -292,14 +292,27 @@
       "평균 :  83.75\n",
       "표준편차 :  11.769487386175038\n",
       "분산 :  138.52083333333334\n",
-      "평균2 :  [92.   80.5  78.75]\n"
+      "평균2 :  [92.   80.5  78.75]\n",
+      "평균2 :  [84.         91.         79.66666667 80.33333333]\n",
+      "행 :  [368 322 315]\n",
+      "행 :  [252 273 239 241]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "368"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# 학생 4명의 3과목 성적 (국어, 영어, 수학)이 넘파이 배열에 저장 되었다고 가정하자.\n",
     "import numpy as np\n",
-    "                    # -> axis = 1\n",
+    "                    # -> axis = 1 \n",
     "scores = np.array([[99, 93, 60],    #\n",
     "                   [98, 82, 93],    # axis =0\n",
     "                   [93, 65, 81],    # ↓\n",
@@ -312,7 +325,11 @@
     "print(\"평균 : \",scores.mean())  # 평균\n",
     "print(\"표준편차 : \",scores.std())  # 표준편차\n",
     "print(\"분산 : \",scores.var())  # 분산 \n",
-    "print(\"평균2 : \",scores.mean(axis=0))  #  axis = 0  행 axis = 1 열 \n"
+    "print(\"평균2 : \",scores.mean(axis=0))  #  axis = 0  행 axis = 1 열 \n",
+    "print(\"평균2 : \",scores.mean(axis=1))  #  axis = 0  행 axis = 1 열 \n",
+    "print(\"행 : \", scores.sum(axis=0))\n",
+    "print(\"행 : \", scores.sum(axis=1))\n",
+    "\n"
    ]
   },
   {
